tests/errors/macro/parser_include_need_filename/unexpected_char_after_include.c
#include asd

int main()
{
	return 0;
}
